--- a/index.html
+++ b/index.html
@@ -93,16 +93,7 @@
   <!-- Seção vídeos -->
   <section id="sec-videos" class="hidden">
     <h2>Vídeos</h2>
-    <div class="video-list">
-      <video controls>
-        <source src="video1.mp4" type="video/mp4">
-        Seu navegador não suporta vídeo.
-      </video>
-      <video controls>
-        <source src="video2.mp4" type="video/mp4">
-        Seu navegador não suporta vídeo.
-      </video>
-    </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/sg4qdn8Bb_A?si=hwj4qVgI7WLeRvG3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </section>
 
   <!-- Seção Cores -->
@@ -239,4 +230,5 @@
   <p>Todos os direitos reservados para Macias®.</p>
 </footer>
 </html>
+
 
