--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="style.css" />
 
   <style>
-    /* alternar seções */
     .hidden { display: none; }
     .nav-switch { display:flex; gap:8px; margin:16px 0; }
     .nav-switch button{
@@ -25,8 +24,6 @@
     .video-list video{
       width:100%; max-width:600px; margin-bottom:16px;
     }
-
-    /* modal */
     .modal {
       display:none; position:fixed; top:0; left:0; width:100%; height:100%;
       background:rgba(0,0,0,.6); justify-content:center; align-items:center;
@@ -41,8 +38,6 @@
     .modal-content .close {
       position:absolute; top:8px; right:12px; font-size:28px; cursor:pointer;
     }
-
-    /* Zoom das cores */
     #colorZoom {
       position: absolute;
       display: none;
@@ -65,14 +60,12 @@
   <div id="colorZoom"></div>
   <h1 id="refreshTitle">Catálogo de Tecidos</h1>
 
-  <!-- Botões para trocar -->
   <div class="nav-switch">
     <button id="btn-catalogo" class="active">Artigos</button>
     <button id="btn-videos">Vídeos</button>
     <button id="btn-cores">Cores</button>
   </div>
 
-  <!-- Seção catálogo -->
   <section id="sec-catalogo">
     <div class="filters">
       <div class="search-container">
@@ -81,6 +74,7 @@
 
       <select id="compositionFilter"><option value="">Composição</option></select>
       <select id="gramWeightFilter"><option value="">Gramatura</option></select>
+      <select id="widthFilter"><option value="">Largura</option></select>
       <select id="lineFilter"><option value="">Linha</option></select>
       <select id="ligamentoFilter"><option value="">Estrutura</option></select>
       <select id="applicationFilter"><option value="">Aplicação</option></select>
@@ -90,47 +84,43 @@
     <div class="catalog" id="catalog"></div>
   </section>
 
-  <!-- Seção vídeos -->
   <section id="sec-videos" class="hidden">
-    <h2>Vídeos</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/sg4qdn8Bb_A?si=hwj4qVgI7WLeRvG3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/sg4qdn8Bb_A?si=TnkL-QbzLoMP9vGX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </section>
 
-  <!-- Seção Cores -->
-   <section id="sec-cores" class="hidden">
-  <h2>Lista de Cores</h2>
-  <div id="coresContainer" class="catalog"></div>
-</section>
+  <section id="sec-cores" class="hidden">
+    <h2>Lista de Cores</h2>
+    <div id="coresContainer" class="catalog"></div>
+  </section>
 
-  <!-- Modal de detalhes do tecido -->
-<div id="tecidoModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
+  <!-- Modal com largura adicionada -->
+  <div id="tecidoModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
 
-    <div class="img-container">
-      <img id="m-imagem" alt="Tecido">
-    </div>
+      <div class="img-container">
+        <img id="m-imagem" alt="Tecido">
+      </div>
 
-    <div class="info">
-      <h2 id="m-nome"></h2>
-      <p><strong>Código:</strong> <span id="m-codigo"></span></p>
-      <p><strong>Composição:</strong> <span id="m-composicao"></span></p>
-      <p><strong>Gramatura:</strong> <span id="m-gramatura"></span></p>
-      <p><strong>Linha:</strong> <span id="m-linha"></span></p>
-      <p><strong>Estrutura:</strong> <span id="m-ligamento"></span></p>
-      <p><strong>Aplicação:</strong> <span id="m-aplicacao"></span></p>
-      <p><strong>Cores:</strong></p>
-      <ul id="m-cores"></ul>
+      <div class="info">
+        <h2 id="m-nome"></h2>
+        <p><strong>Código:</strong> <span id="m-codigo"></span></p>
+        <p><strong>Composição:</strong> <span id="m-composicao"></span></p>
+        <p><strong>Gramatura:</strong> <span id="m-gramatura"></span></p>
+        <p><strong>Largura:</strong> <span id="m-largura"></span></p>
+        <p><strong>Linha:</strong> <span id="m-linha"></span></p>
+        <p><strong>Estrutura:</strong> <span id="m-ligamento"></span></p>
+        <p><strong>Aplicação:</strong> <span id="m-aplicacao"></span></p>
+        <p><strong>Cores:</strong></p>
+        <ul id="m-cores"></ul>
+      </div>
     </div>
   </div>
-</div>
 
-  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <script src="script.js"></script>
 
-  <!-- Alternar seções -->
   <script>
     const btnCatalogo = document.getElementById('btn-catalogo');
     const btnVideos   = document.getElementById('btn-videos');
@@ -155,7 +145,6 @@
     btnVideos.addEventListener('click',   () => showSection('videos'));
   </script>
 
-  <!-- Modal JS -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const modal   = document.getElementById('tecidoModal');
@@ -165,6 +154,7 @@
       const codigo     = document.getElementById('m-codigo');
       const composicao = document.getElementById('m-composicao');
       const gramatura  = document.getElementById('m-gramatura');
+      const largura    = document.getElementById('m-largura'); // <- NOVO
       const linha      = document.getElementById('m-linha');
       const ligamento  = document.getElementById('m-ligamento');
       const aplicacao  = document.getElementById('m-aplicacao');
@@ -179,11 +169,11 @@
         codigo.textContent     = card.dataset.codigo;
         composicao.textContent = card.dataset.composicao;
         gramatura.textContent  = card.dataset.gramatura;
+        largura.textContent    = card.dataset.largura || "—"; // <- NOVO
         linha.textContent      = card.dataset.linha;
         ligamento.textContent  = card.dataset.ligamento;
         aplicacao.textContent  = card.dataset.aplicacao;
 
-        // renderizar cores com <li><img>
         const fabricColors = card.dataset.cores.split(', ');
         cores.innerHTML = fabricColors.map(c => {
           const code = c.split(' ')[0];
@@ -200,7 +190,6 @@
       close.addEventListener('click', () => modal.style.display = 'none');
       modal.addEventListener('click', e => { if (e.target === modal) modal.style.display = 'none'; });
 
-      // Zoom automático das cores
       const colorZoom = document.getElementById('colorZoom');
       document.addEventListener('mouseover', function(e) {
         if(e.target.tagName === 'IMG' && e.target.parentElement.tagName === 'LI'){
@@ -222,7 +211,6 @@
     });
 
     document.getElementById('refreshTitle').onclick = () => location.reload();
-    
   </script>
 </body>
 <footer id="catalogFooter">
@@ -230,5 +218,3 @@
   <p>Todos os direitos reservados para Macias®.</p>
 </footer>
 </html>
-
-
